Remove String preview feature