@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.pedrovisk</groupId>
 	<artifactId>proxmox-notifier</artifactId>
-	<version>0.4.0</version>
+	<version>0.4.1</version>
 	<name>proxmox-notifier</name>
 	<description>Proxmox Notifier</description>
 	<properties>
@@ -118,7 +118,6 @@
 				<configuration>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
 					<reportsDirectory>${project.build.directory}/test-reports</reportsDirectory>
-					<argLine>--enable-preview</argLine>
 				</configuration>
 
 			</plugin>
@@ -135,7 +134,6 @@
 				<configuration>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
 					<reportsDirectory>${project.build.directory}/test-reports</reportsDirectory>
-					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -144,12 +142,14 @@
 				<configuration>
 					<image>
 						<builder>paketobuildpacks/builder-jammy-tiny</builder>
+						<env>
+							<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+						</env>
 					</image>
 					<layers>
 						<enabled>true</enabled>
 					</layers>
-					<jvmArguments>--enable-preview</jvmArguments>
-					<compilerArguments>--enable-preview</compilerArguments>
+					<jvmArguments>-Xms100m -Xmx100m</jvmArguments>
 				</configuration>
 			</plugin>
             <plugin>
@@ -158,7 +158,6 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
